# fastapi-nginx-gunicorn

./: .gitignore  README.md  gunicorn_start  main.py  nginx-fastapi-app  pyproject.toml  requirements-dev.txt  requirements.txt  supervisor-fast-api.conf
