[tool.poetry]
name = "fastapi-nginx-gunicorn"
version = "0.1.0"
description = ""
authors = ["Dylan Castillo <dylanjcastillo@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_nginx_gunicorn"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
